--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
         "num_points": 1000,
         "start_time": 20,
         "pulse_amplitude": 10,
-        "pulse_duration": 10
+        "pulse_duration": null
     },
     "initial_conditions": {
         "V0": -60.0,
